--- a/PYDA hw pandas advanced join.ipynb
+++ b/PYDA hw pandas advanced join.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "40080507.4496124"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
     "\n",
     "users_summary = ratings.groupby('userId')['timestamp'].agg(['count', 'max', 'min']).reset_index()\n",
     "users_summary.loc[(users_summary['count'] > 100), 'life time'] = users_summary['max'] - users_summary['min']\n",
-    "data['life time'].mean()"
+    "users_summary['life time'].mean()"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "4        115          981"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "4        117            98"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "3        118          173"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "7        118     Мастеркова 4"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
        "7        118          NaN           NaN        173.0"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
        "7        118     Мастеркова 4          NaN           NaN        173.0"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
